--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7583,7 +7583,7 @@ html:not([dir=rtl]) .offcanvas-header .btn-close {
 
 .avatar-img {
   width: 100%;
-  height: auto;
+  height: 100%;
   border-radius: 50em;
 }
 
