--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -143,8 +143,8 @@ display: block;
   display: flex;
   flex-direction: column;
   margin-top: 1%;
-  justify-content: center;
-  align-items: center;
+  justify-content: left;
+  align-items: left;
 }
 
 #rowAdder {
