--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -208,3 +208,12 @@ display: block;
   font-family: FontAwesome;
 }
 
+
+/* style for the menue dropdown*/
+.sidebar li .submenu{ 
+	list-style: none; 
+	margin: 0; 
+	padding: 0; 
+	padding-left: 1rem; 
+	padding-right: 1rem;
+}
