--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -38,7 +38,7 @@ display: block;
 .cardParentClass .x-task-card{
 position: absolute;
 top: 0px;
-left: 255;
+left: 210;
 display: block;
 }
 
@@ -49,7 +49,7 @@ display: block;
 .cardParentEditClass .x-project-card{
 position: absolute;
 top: 10px;
-left: 550;
+left: 530;
 display: block;
 }
 .cardParentEditClass .x-star-card{
@@ -712,146 +712,8 @@ box-shadow: rgba(255,255,255, 0.75) 1.5em 0 0 0, rgba(255,255,255, 0.75) 1.1em 1
   }
 }
 
-/* for the background effect */
-@import url('https://fonts.googleapis.com/css?family=Exo:400,700');
-
-
-.context {
-    width: 100%;
-    position: absolute;
-    top:50vh;
-}
-
-.context h1{
-    text-align: center;
-    color: #fff;
-    font-size: 50px;
-}
-
-.area{
-    background: #515f77;  
-    background: -webkit-linear-gradient(to left, #606af3, #eb0effbb);  
-    width: 100%;
-    height:100vh;
-}
-
-.circles{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-}
-
-.circles li{
-    position: absolute;
-    display: block;
-    list-style: none;
-    width: 20px;
-    height: 20px;
-    background: rgba(156, 35, 212, 0.507);
-    animation: animate 25s linear infinite;
-    bottom: -150px;
-    
-}
-
-.circles li:nth-child(1){
-    left: 25%;
-    width: 80px;
-    height: 80px;
-    animation-delay: 0s;
-}
-
-
-.circles li:nth-child(2){
-    left: 10%;
-    width: 20px;
-    height: 20px;
-    animation-delay: 2s;
-    animation-duration: 12s;
-}
-
-.circles li:nth-child(3){
-    left: 70%;
-    width: 20px;
-    height: 20px;
-    animation-delay: 4s;
-}
-
-.circles li:nth-child(4){
-    left: 40%;
-    width: 60px;
-    height: 60px;
-    animation-delay: 0s;
-    animation-duration: 18s;
-}
-
-.circles li:nth-child(5){
-    left: 65%;
-    width: 20px;
-    height: 20px;
-    animation-delay: 0s;
-}
-
-.circles li:nth-child(6){
-    left: 75%;
-    width: 110px;
-    height: 110px;
-    animation-delay: 3s;
-}
-
-.circles li:nth-child(7){
-    left: 35%;
-    width: 150px;
-    height: 150px;
-    animation-delay: 7s;
-}
-
-.circles li:nth-child(8){
-    left: 50%;
-    width: 25px;
-    height: 25px;
-    animation-delay: 15s;
-    animation-duration: 45s;
-}
-
-.circles li:nth-child(9){
-    left: 20%;
-    width: 15px;
-    height: 15px;
-    animation-delay: 2s;
-    animation-duration: 35s;
-}
-
-.circles li:nth-child(10){
-    left: 85%;
-    width: 150px;
-    height: 150px;
-    animation-delay: 0s;
-    animation-duration: 11s;
-}
-
-
-
-@keyframes animate {
-
-    0%{
-        transform: translateY(0) rotate(0deg);
-        opacity: 1;
-        border-radius: 0;
-    }
-
-    100%{
-        transform: translateY(-1000px) rotate(720deg);
-        opacity: 0;
-        border-radius: 50%;
-    }
-
-}
 
 /*calendar*/
-
 
 a {
 	background: transparent;
@@ -2688,7 +2550,6 @@ body {background: #eeeae9;}
 
 /*progress bar*/
 
-
 .progress:before,
 
 .progress:after{
@@ -2696,6 +2557,7 @@ body {background: #eeeae9;}
   left: auto;
   right: 0;
 }
+
 .progress .progress-bar{
   box-shadow: none;
   border: none;
@@ -2705,15 +2567,15 @@ body {background: #eeeae9;}
   animation: animate-positive 1s;
 }
 .progress .progress-value{
-  width: 70px;
+  width: 40px;
   height: 35px;
   line-height: 27px;
   border-radius: 20px;
   background: #fff;
-  font-size: 17px;
+  font-size: 10px;
   font-weight: 600;
   position: absolute;
-  top: -12px;
+  top: -11px;
   right: 0;
   z-index: 2;
 }
@@ -2728,4 +2590,169 @@ body {background: #eeeae9;}
 }
 @keyframes animate-positive{
   0%{ width: 0; }
+}
+
+/*animated bg*/
+/*dashboard + projects*/
+.context {
+    /* width: 100%; */
+    position: absolute;
+    /* top:50vh; */
+}
+
+/*tasks*/
+.context1{
+  position: absolute; 
+  top: 100px; 
+  right: -95px
+}
+
+/*skills*/
+.context2{
+  position: absolute; 
+  top: 150px; 
+  right: -95px
+}
+
+/*users*/
+.context3{
+  position: absolute; 
+  top: 200px; 
+  right: -95px
+}
+
+/*clients*/
+.context4{
+  position: absolute; 
+  top: 250px; 
+  right: -103px
+}
+
+/*logout*/
+.context5{
+  position: absolute; 
+  top: 450px; 
+  right: -100px
+}
+
+.area{
+    background: #3c4b64;  
+    background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);  
+    width: 100%;
+    height:100vh;
+}
+
+.circles{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.circles li{
+    position: absolute;
+    display: block;
+    list-style: none;
+    width: 20px;
+    height: 20px;
+    background: rgba(255, 255, 255, 0.2);
+    animation: animate 25s linear infinite;
+    bottom: -150px;
+    
+}
+
+.circles li:nth-child(1){
+    left: 25%;
+    width: 80px;
+    height: 80px;
+    animation-delay: 0s;
+}
+
+
+.circles li:nth-child(2){
+    left: 10%;
+    width: 20px;
+    height: 20px;
+    animation-delay: 2s;
+    animation-duration: 12s;
+}
+
+.circles li:nth-child(3){
+    left: 70%;
+    width: 20px;
+    height: 20px;
+    animation-delay: 4s;
+}
+
+.circles li:nth-child(4){
+    left: 40%;
+    width: 60px;
+    height: 60px;
+    animation-delay: 0s;
+    animation-duration: 18s;
+}
+
+.circles li:nth-child(5){
+    left: 65%;
+    width: 20px;
+    height: 20px;
+    animation-delay: 0s;
+}
+
+.circles li:nth-child(6){
+    left: 75%;
+    width: 110px;
+    height: 110px;
+    animation-delay: 3s;
+}
+
+.circles li:nth-child(7){
+    left: 35%;
+    width: 150px;
+    height: 150px;
+    animation-delay: 7s;
+}
+
+.circles li:nth-child(8){
+    left: 50%;
+    width: 25px;
+    height: 25px;
+    animation-delay: 15s;
+    animation-duration: 45s;
+}
+
+.circles li:nth-child(9){
+    left: 20%;
+    width: 15px;
+    height: 15px;
+    animation-delay: 2s;
+    animation-duration: 35s;
+}
+
+.circles li:nth-child(10){
+    left: 85%;
+    width: 150px;
+    height: 150px;
+    animation-delay: 0s;
+    animation-duration: 11s;
+}
+
+
+
+@keyframes animate {
+
+    0%{
+        transform: translateY(0) rotate(0deg);
+        opacity: 1;
+        border-radius: 0;
+    }
+
+    100%{
+        transform: translateY(-1000px) rotate(720deg);
+        opacity: 0;
+        border-radius: 50%;
+    }
+
 }
